Basic wishlist functionality finished

--- a/Text-Trade/Podfile
+++ b/Text-Trade/Podfile
@@ -4,7 +4,7 @@
 target 'Text-Trade' do
   # Comment the next line if you don't want to use dynamic frameworks
   #use_frameworks!
-  use_modular_headers!
+  #use_modular_headers!
   
   # Pods for Text-Trade
   pod 'Firebase/Core'
